# WisprCloneTask

./: .env  README.md  package-lock.json  package.json
public/: hud.html
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Controls.jsx  Icons.jsx  StatusBadge.jsx
src/hooks/: useDeepgram.js
